accelerated-domains: add ludongyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55809,6 +55809,7 @@ server=/ludedc.com/114.114.114.114
 server=/ludengtyn.com/114.114.114.114
 server=/ludeqi.com/114.114.114.114
 server=/ludiban.com/114.114.114.114
+server=/ludongyy.com/114.114.114.114
 server=/ludou.org/114.114.114.114
 server=/ludown.com/114.114.114.114
 server=/ludoworld.net/114.114.114.114
