--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93104,6 +93104,7 @@ server=/ynxinhua.com/114.114.114.114
 server=/ynxinshili.com/114.114.114.114
 server=/ynxiu.com/114.114.114.114
 server=/ynxr.com/114.114.114.114
+server=/ynxrmyy.com/114.114.114.114
 server=/ynxxb.com/114.114.114.114
 server=/ynxxwfw.com/114.114.114.114
 server=/ynyc.com/114.114.114.114
