--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37709,6 +37709,7 @@ server=/gzpeiyou.com/114.114.114.114
 server=/gzpfs.com/114.114.114.114
 server=/gzpg.net/114.114.114.114
 server=/gzpggy.com/114.114.114.114
+server=/gzph.net/114.114.114.114
 server=/gzpinda.com/114.114.114.114
 server=/gzpma.com/114.114.114.114
 server=/gzprobig.com/114.114.114.114
