accelerated-domains: add nbsdjyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60747,6 +60747,7 @@ server=/nbren.net/114.114.114.114
 server=/nbrj.com/114.114.114.114
 server=/nbrlzy.com/114.114.114.114
 server=/nbsason.com/114.114.114.114
+server=/nbsdjyy.com/114.114.114.114
 server=/nbshuoxue.com/114.114.114.114
 server=/nbshzwyy.com/114.114.114.114
 server=/nbsp99.com/114.114.114.114
