accelerated-domains: add lnpatcm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55127,6 +55127,7 @@ server=/lnlc2.net/114.114.114.114
 server=/lnlotto.com/114.114.114.114
 server=/lnmtc.com/114.114.114.114
 server=/lnok.net/114.114.114.114
+server=/lnpatcm.com/114.114.114.114
 server=/lnpenger.com/114.114.114.114
 server=/lnpjw.com/114.114.114.114
 server=/lnpolds.com/114.114.114.114
