--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68437,6 +68437,7 @@ server=/qzhlkj.net/114.114.114.114
 server=/qzhmps.com/114.114.114.114
 server=/qzhmyy.com/114.114.114.114
 server=/qzhmzx.com/114.114.114.114
+server=/qzhospital.com/114.114.114.114
 server=/qzhrkj.com/114.114.114.114
 server=/qzhsjc.com/114.114.114.114
 server=/qzhslw.com/114.114.114.114
