accelerated-domains: add sdstslyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71079,6 +71079,7 @@ server=/sdsmefina.com/114.114.114.114
 server=/sdss99.fun/114.114.114.114
 server=/sdssiliao.com/114.114.114.114
 server=/sdstdc.com/114.114.114.114
+server=/sdstslyy.com/114.114.114.114
 server=/sdsxwz.net/114.114.114.114
 server=/sdsytgcl.com/114.114.114.114
 server=/sdszszgcyxgs.com/114.114.114.114
