accelerated-domains: add dqlnyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26727,6 +26727,7 @@ server=/dqguo.com/114.114.114.114
 server=/dqhui.com/114.114.114.114
 server=/dqiis.com/114.114.114.114
 server=/dqjob88.com/114.114.114.114
+server=/dqlnyy.com/114.114.114.114
 server=/dqoooo.com/114.114.114.114
 server=/dqpi.net/114.114.114.114
 server=/dqpkb.com/114.114.114.114
