--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60862,6 +60862,7 @@ server=/ndpharm.com/114.114.114.114
 server=/ndsad.com/114.114.114.114
 server=/ndscsoft.com/114.114.114.114
 server=/ndser.net/114.114.114.114
+server=/ndsyy.com/114.114.114.114
 server=/ndszgb.com/114.114.114.114
 server=/nduoa.com/114.114.114.114
 server=/nduotuan.com/114.114.114.114
