--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39060,6 +39060,7 @@ server=/hbs-nd.com/114.114.114.114
 server=/hbscd.com/114.114.114.114
 server=/hbscsb.com/114.114.114.114
 server=/hbsczx.com/114.114.114.114
+server=/hbsczzxy.com/114.114.114.114
 server=/hbsdenterprise.com/114.114.114.114
 server=/hbsfedu.com/114.114.114.114
 server=/hbsgsq.com/114.114.114.114
