accelerated-domains: add zhaokaocn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96381,6 +96381,7 @@ server=/zhaojunhg.com/114.114.114.114
 server=/zhaokai99.com/114.114.114.114
 server=/zhaokaifeng.com/114.114.114.114
 server=/zhaokao.net/114.114.114.114
+server=/zhaokaocn.com/114.114.114.114
 server=/zhaokeli.com/114.114.114.114
 server=/zhaoketang.com/114.114.114.114
 server=/zhaokuaizhao.com/114.114.114.114
