--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57269,6 +57269,7 @@ server=/massage-hospital.com/114.114.114.114
 server=/massclouds.com/114.114.114.114
 server=/masscrunch.com/114.114.114.114
 server=/massestech.com/114.114.114.114
+server=/masszxyy.com/114.114.114.114
 server=/master-ioowe-iwww.com/114.114.114.114
 server=/mastercardnucc.com/114.114.114.114
 server=/masterchefworks.com/114.114.114.114
