accelerated-domains: add hyhospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43253,6 +43253,7 @@ server=/hyhcdn.com/114.114.114.114
 server=/hyhfsj.com/114.114.114.114
 server=/hyhjzc.com/114.114.114.114
 server=/hyhl66.com/114.114.114.114
+server=/hyhospital.com/114.114.114.114
 server=/hyhro.com/114.114.114.114
 server=/hyhuo.com/114.114.114.114
 server=/hyhy.cc/114.114.114.114
