--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60404,6 +60404,7 @@ server=/mzrmyy.com/114.114.114.114
 server=/mzsdsyy.com/114.114.114.114
 server=/mzsky.cc/114.114.114.114
 server=/mzsmn.com/114.114.114.114
+server=/mzsrmyy.com/114.114.114.114
 server=/mzssysmyxgs.com/114.114.114.114
 server=/mzsvn.com/114.114.114.114
 server=/mztgame.com/114.114.114.114
