accelerated-domains: add sclsnk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70754,6 +70754,7 @@ server=/sclishi.com/114.114.114.114
 server=/sclive.net/114.114.114.114
 server=/scll.cc/114.114.114.114
 server=/sclrjc.com/114.114.114.114
+server=/sclsnk.com/114.114.114.114
 server=/sclssz.com/114.114.114.114
 server=/sclzfq.com/114.114.114.114
 server=/scm121.com/114.114.114.114
