--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85417,6 +85417,7 @@ server=/wnshouhu.com/114.114.114.114
 server=/wnsqzonebk.com/114.114.114.114
 server=/wnsr25.com/114.114.114.114
 server=/wnssedu.com/114.114.114.114
+server=/wnszxyy.com/114.114.114.114
 server=/wntool.com/114.114.114.114
 server=/wntzjt.com/114.114.114.114
 server=/wnuos.com/114.114.114.114
