--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15304,6 +15304,7 @@ server=/bkweek.com/114.114.114.114
 server=/bkzzy.com/114.114.114.114
 server=/bl.com/114.114.114.114
 server=/bl0757.com/114.114.114.114
+server=/bl91.com/114.114.114.114
 server=/bla01.com/114.114.114.114
 server=/black-unique.com/114.114.114.114
 server=/blackbirdsport.com/114.114.114.114
