--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92725,6 +92725,7 @@ server=/yjfs8.com/114.114.114.114
 server=/yjgxcx.com/114.114.114.114
 server=/yjhbqx.com/114.114.114.114
 server=/yjhnt888.com/114.114.114.114
+server=/yjhospital.com/114.114.114.114
 server=/yjhyjl.com/114.114.114.114
 server=/yjhzb.com/114.114.114.114
 server=/yjias.com/114.114.114.114
