--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9692,6 +9692,7 @@ server=/ahhhjx.com/114.114.114.114
 server=/ahhngsjt.com/114.114.114.114
 server=/ahhnsz.net/114.114.114.114
 server=/ahhouse.com/114.114.114.114
+server=/ahhsxyy.com/114.114.114.114
 server=/ahhtzx.com/114.114.114.114
 server=/ahhwdp.com/114.114.114.114
 server=/ahhyzn.com/114.114.114.114
