--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90501,6 +90501,7 @@ server=/xxshell.com/114.114.114.114
 server=/xxshu.com/114.114.114.114
 server=/xxskins.com/114.114.114.114
 server=/xxspd.com/114.114.114.114
+server=/xxsrmyy.com/114.114.114.114
 server=/xxsy.net/114.114.114.114
 server=/xxsypro.com/114.114.114.114
 server=/xxszxw.net/114.114.114.114
