--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38802,6 +38802,7 @@ server=/harmony3.com/114.114.114.114
 server=/harmony4s.com/114.114.114.114
 server=/harmonyos.com/114.114.114.114
 server=/harmonywatch.com/114.114.114.114
+server=/harmyy.com/114.114.114.114
 server=/harpost.com/114.114.114.114
 server=/harpping.com/114.114.114.114
 server=/harryhorsemedia.com/114.114.114.114
