accelerated-domains: add tkxyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79078,6 +79078,7 @@ server=/tkwcn.com/114.114.114.114
 server=/tkww.hk/114.114.114.114
 server=/tkxlglyy.com/114.114.114.114
 server=/tkxxd.net/114.114.114.114
+server=/tkxyy.com/114.114.114.114
 server=/tky001.com/114.114.114.114
 server=/tkyks.xyz/114.114.114.114
 server=/tl-self.com/114.114.114.114
