--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73375,6 +73375,7 @@ server=/shxmhjs.com/114.114.114.114
 server=/shxnetwork.com/114.114.114.114
 server=/shxrcw.com/114.114.114.114
 server=/shxrmtzx.com/114.114.114.114
+server=/shxrmyy.com/114.114.114.114
 server=/shxseer.com/114.114.114.114
 server=/shxsj.com/114.114.114.114
 server=/shxuanming.net/114.114.114.114
