accelerated-domains: add sfy-gmc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71548,6 +71548,7 @@ server=/sftj.net/114.114.114.114
 server=/sfvip1.com/114.114.114.114
 server=/sfwxf.com/114.114.114.114
 server=/sfxd.cc/114.114.114.114
+server=/sfy-gmc.com/114.114.114.114
 server=/sfyb.com/114.114.114.114
 server=/sfybuyi.com/114.114.114.114
 server=/sfydns.com/114.114.114.114
