accelerated-domains: add tfxqrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78227,6 +78227,7 @@ server=/tfsmy.com/114.114.114.114
 server=/tftplay.com/114.114.114.114
 server=/tfvisa.com/114.114.114.114
 server=/tfwka.com/114.114.114.114
+server=/tfxqrmyy.com/114.114.114.114
 server=/tfyum.net/114.114.114.114
 server=/tfzah.icu/114.114.114.114
 server=/tfzq.com/114.114.114.114
