accelerated-domains: add yjsry.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92775,6 +92775,7 @@ server=/yjs-cdn9.com/114.114.114.114
 server=/yjscloud.com/114.114.114.114
 server=/yjsershi.com/114.114.114.114
 server=/yjsmodel.com/114.114.114.114
+server=/yjsry.com/114.114.114.114
 server=/yjssishisi.com/114.114.114.114
 server=/yjsswjt.com/114.114.114.114
 server=/yjtiyu.com/114.114.114.114
