accelerated-domains: add gy120.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37448,6 +37448,7 @@ server=/gxzztkj.com/114.114.114.114
 server=/gxzzxin.com/114.114.114.114
 server=/gy-ggy.com/114.114.114.114
 server=/gy.com/114.114.114.114
+server=/gy120.net/114.114.114.114
 server=/gy1688led.com/114.114.114.114
 server=/gy2025.com/114.114.114.114
 server=/gy794c.com/114.114.114.114
