--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38880,6 +38880,7 @@ server=/hbairport.com/114.114.114.114
 server=/hbanbao.com/114.114.114.114
 server=/hbaog.com/114.114.114.114
 server=/hbbaidu.com/114.114.114.114
+server=/hbbfyfy.com/114.114.114.114
 server=/hbbidcloud.com/114.114.114.114
 server=/hbbidding.com/114.114.114.114
 server=/hbbmjd.com/114.114.114.114
