--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93123,6 +93123,7 @@ server=/ynsxjr.com/114.114.114.114
 server=/ynsydwzp.com/114.114.114.114
 server=/ynsyhkgs.com/114.114.114.114
 server=/ynszfw.com/114.114.114.114
+server=/ynszlyy.com/114.114.114.114
 server=/yntcbc.com/114.114.114.114
 server=/ynurl.com/114.114.114.114
 server=/ynw360.com/114.114.114.114
