--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34573,6 +34573,7 @@ server=/gssag.com/114.114.114.114
 server=/gssbh.com/114.114.114.114
 server=/gssdlv.com/114.114.114.114
 server=/gsseo.net/114.114.114.114
+server=/gssey.com/114.114.114.114
 server=/gsshylsh.com/114.114.114.114
 server=/gssjyxrmyy.com/114.114.114.114
 server=/gssltxrmyy.com/114.114.114.114
