--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60748,6 +60748,7 @@ server=/nbjzjn.com/114.114.114.114
 server=/nbkaisheng.com/114.114.114.114
 server=/nbkc-rp.com/114.114.114.114
 server=/nbkjjx.com/114.114.114.114
+server=/nblhlyy.com/114.114.114.114
 server=/nblongzhan.com/114.114.114.114
 server=/nbmai.com/114.114.114.114
 server=/nbmedicalsystem.com/114.114.114.114
