--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41801,6 +41801,7 @@ server=/hssenglish.com/114.114.114.114
 server=/hssjyj.com/114.114.114.114
 server=/hsslab.com/114.114.114.114
 server=/hssrc.com/114.114.114.114
+server=/hssyy.com/114.114.114.114
 server=/hsszfx.com/114.114.114.114
 server=/hst.com/114.114.114.114
 server=/hst1966.net/114.114.114.114
