accelerated-domains: add shdmu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72115,6 +72115,7 @@ server=/shdjt.com/114.114.114.114
 server=/shdmgs.com/114.114.114.114
 server=/shdmic.com/114.114.114.114
 server=/shdmt.net/114.114.114.114
+server=/shdmu.com/114.114.114.114
 server=/shdpyq.com/114.114.114.114
 server=/shdrc.org/114.114.114.114
 server=/shdrkj.com/114.114.114.114
