accelerated-domains: add jxgwy.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50052,6 +50052,7 @@ server=/jxg866.com/114.114.114.114
 server=/jxgcxy.net/114.114.114.114
 server=/jxgdw.com/114.114.114.114
 server=/jxgtzxc.com/114.114.114.114
+server=/jxgwy.org/114.114.114.114
 server=/jxgxlc.com/114.114.114.114
 server=/jxgztv.com/114.114.114.114
 server=/jxh2000.net/114.114.114.114
