--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76678,6 +76678,7 @@ server=/szc.com/114.114.114.114
 server=/szca.com/114.114.114.114
 server=/szcatic.com/114.114.114.114
 server=/szcfyi.com/114.114.114.114
+server=/szch-cn.com/114.114.114.114
 server=/szchengli.com/114.114.114.114
 server=/szchengyue.com/114.114.114.114
 server=/szchunqiu.com/114.114.114.114
