--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78464,6 +78464,7 @@ server=/thxdx.com/114.114.114.114
 server=/thxedu.com/114.114.114.114
 server=/thxflt.com/114.114.114.114
 server=/thxnr.com/114.114.114.114
+server=/thxyy.com/114.114.114.114
 server=/thyoo.com/114.114.114.114
 server=/thyuu.com/114.114.114.114
 server=/thz56.com/114.114.114.114
