accelerated-domains: add lnmu3h.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55141,6 +55141,7 @@ server=/lnlawyers.net/114.114.114.114
 server=/lnlc2.net/114.114.114.114
 server=/lnlotto.com/114.114.114.114
 server=/lnmtc.com/114.114.114.114
+server=/lnmu3h.com/114.114.114.114
 server=/lnok.net/114.114.114.114
 server=/lnpatcm.com/114.114.114.114
 server=/lnpenger.com/114.114.114.114
