accelerated-domains: add gyfyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37466,6 +37466,7 @@ server=/gydongli.com/114.114.114.114
 server=/gyersf.com/114.114.114.114
 server=/gyfensuiji.com/114.114.114.114
 server=/gyfwyy.com/114.114.114.114
+server=/gyfyy.com/114.114.114.114
 server=/gygmhs.com/114.114.114.114
 server=/gyhapp.com/114.114.114.114
 server=/gyhb68.com/114.114.114.114
