accelerated-domains: add hanxingtv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38409,6 +38409,7 @@ server=/hanwujinian.com/114.114.114.114
 server=/hanwujinian.net/114.114.114.114
 server=/hanximeng.com/114.114.114.114
 server=/hanxin.me/114.114.114.114
+server=/hanxingtv.com/114.114.114.114
 server=/hanxinsheng.com/114.114.114.114
 server=/hanyangmoto.com/114.114.114.114
 server=/hanyanseed.com/114.114.114.114
