accelerated-domains: add qnzrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67434,6 +67434,7 @@ server=/qnwoocaijo.com/114.114.114.114
 server=/qnydns.com/114.114.114.114
 server=/qnydns.net/114.114.114.114
 server=/qnzhdf.com/114.114.114.114
+server=/qnzrmyy.com/114.114.114.114
 server=/qnzyy.com/114.114.114.114
 server=/qoaao.com/114.114.114.114
 server=/qolai.com/114.114.114.114
