accelerated-domains: add qdbhuh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66211,6 +66211,7 @@ server=/qdairport.com/114.114.114.114
 server=/qdauction.com/114.114.114.114
 server=/qdbcmy.com/114.114.114.114
 server=/qdbdsk.com/114.114.114.114
+server=/qdbhuh.com/114.114.114.114
 server=/qdbocweb.com/114.114.114.114
 server=/qdcaijing.com/114.114.114.114
 server=/qdccb.com/114.114.114.114
