--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91491,6 +91491,7 @@ server=/ydsaso.com/114.114.114.114
 server=/ydscan.net/114.114.114.114
 server=/ydsjjs.com/114.114.114.114
 server=/ydstatic.com/114.114.114.114
+server=/ydsyyy.com/114.114.114.114
 server=/ydt-express.com/114.114.114.114
 server=/ydt.link/114.114.114.114
 server=/ydtad.com/114.114.114.114
