--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71102,6 +71102,7 @@ server=/sdsdsoft.com/114.114.114.114
 server=/sdsgwy.com/114.114.114.114
 server=/sdshangya.com/114.114.114.114
 server=/sdshshb.com/114.114.114.114
+server=/sdsldsyy.com/114.114.114.114
 server=/sdsmefina.com/114.114.114.114
 server=/sdss99.fun/114.114.114.114
 server=/sdssiliao.com/114.114.114.114
