--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52579,6 +52579,7 @@ server=/ladydaily.com/114.114.114.114
 server=/ladymetro.com/114.114.114.114
 server=/ladyol.com/114.114.114.114
 server=/ladystr.com/114.114.114.114
+server=/laey.net/114.114.114.114
 server=/laf.run/114.114.114.114
 server=/lafacw.xyz/114.114.114.114
 server=/lafaso.com/114.114.114.114
