--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49337,6 +49337,7 @@ server=/jsjffj.com/114.114.114.114
 server=/jsjiami.com/114.114.114.114
 server=/jsjinfu.com/114.114.114.114
 server=/jsjinzhou.com/114.114.114.114
+server=/jsjj120.com/114.114.114.114
 server=/jsjjy.com/114.114.114.114
 server=/jsjkx.com/114.114.114.114
 server=/jsjljy.com/114.114.114.114
