accelerated-domains: add lhey.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53873,6 +53873,7 @@ server=/lhdeer.com/114.114.114.114
 server=/lhdown.com/114.114.114.114
 server=/lhdwx.com/114.114.114.114
 server=/lhdxz.com/114.114.114.114
+server=/lhey.com/114.114.114.114
 server=/lhgcxx.com/114.114.114.114
 server=/lhguomy.xyz/114.114.114.114
 server=/lhgz.net/114.114.114.114
