accelerated-domains: add xzkwjtzyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90823,6 +90823,7 @@ server=/xzjtkg.com/114.114.114.114
 server=/xzkd.com/114.114.114.114
 server=/xzking.com/114.114.114.114
 server=/xzksyy.com/114.114.114.114
+server=/xzkwjtzyy.com/114.114.114.114
 server=/xzkx.com/114.114.114.114
 server=/xzlogo.com/114.114.114.114
 server=/xzlres.com/114.114.114.114
