accelerated-domains: add jxey.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50048,6 +50048,7 @@ server=/jxedu.net/114.114.114.114
 server=/jxeduyun.com/114.114.114.114
 server=/jxetv.com/114.114.114.114
 server=/jxexpressway.com/114.114.114.114
+server=/jxey.com/114.114.114.114
 server=/jxfeng.com/114.114.114.114
 server=/jxfjhb.com/114.114.114.114
 server=/jxfls.com/114.114.114.114
