accelerated-domains: add ls-hospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55629,6 +55629,7 @@ server=/lrvin.com/114.114.114.114
 server=/lrwxjji.com/114.114.114.114
 server=/ls-doll.com/114.114.114.114
 server=/ls-gb.com/114.114.114.114
+server=/ls-hospital.com/114.114.114.114
 server=/ls-wq.com/114.114.114.114
 server=/ls.link/114.114.114.114
 server=/ls0513.com/114.114.114.114
