--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60845,6 +60845,7 @@ server=/ncpqh.com/114.114.114.114
 server=/ncpssd.org/114.114.114.114
 server=/ncq8.com/114.114.114.114
 server=/ncreal.fun/114.114.114.114
+server=/ncsdyyy.com/114.114.114.114
 server=/ncshxd.com/114.114.114.114
 server=/ncsjhf.com/114.114.114.114
 server=/ncsszjs.com/114.114.114.114
