accelerated-domains: add wfshiliyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84546,6 +84546,7 @@ server=/wfnmjx.com/114.114.114.114
 server=/wfojsm.com/114.114.114.114
 server=/wfplb.com/114.114.114.114
 server=/wfsanshan.com/114.114.114.114
+server=/wfshiliyy.com/114.114.114.114
 server=/wftdrh.com/114.114.114.114
 server=/wftengjia.com/114.114.114.114
 server=/wftvqcm.com/114.114.114.114
