--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87350,6 +87350,7 @@ server=/xh-health.com/114.114.114.114
 server=/xh-silicone.com/114.114.114.114
 server=/xh.com/114.114.114.114
 server=/xh0523.com/114.114.114.114
+server=/xh1958.com/114.114.114.114
 server=/xh39.com/114.114.114.114
 server=/xh456.com/114.114.114.114
 server=/xhaiwai.com/114.114.114.114
