--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39328,6 +39328,7 @@ server=/hdgogogo.com/114.114.114.114
 server=/hdh.im/114.114.114.114
 server=/hdhgzx.com/114.114.114.114
 server=/hdhjtz.com/114.114.114.114
+server=/hdhosp.com/114.114.114.114
 server=/hdhospital.com/114.114.114.114
 server=/hdhsjt.com/114.114.114.114
 server=/hdhui.com/114.114.114.114
