--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70069,6 +70069,7 @@ server=/rzfanyi.com/114.114.114.114
 server=/rzfyu.com/114.114.114.114
 server=/rzhexing.com/114.114.114.114
 server=/rzhushou.com/114.114.114.114
+server=/rzhybh.com/114.114.114.114
 server=/rzkj999.com/114.114.114.114
 server=/rzline.com/114.114.114.114
 server=/rzltech.com/114.114.114.114
