accelerated-domains: add qh-hospital.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66417,6 +66417,7 @@ server=/qgyyzs.net/114.114.114.114
 server=/qgzzz.com/114.114.114.114
 server=/qh-cdn.com/114.114.114.114
 server=/qh-dl.com/114.114.114.114
+server=/qh-hospital.org/114.114.114.114
 server=/qh-lb.com/114.114.114.114
 server=/qh24.com/114.114.114.114
 server=/qh4321.com/114.114.114.114
