accelerated-domains: add zzgkyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99413,6 +99413,7 @@ server=/zzgd.tv/114.114.114.114
 server=/zzgdapp.com/114.114.114.114
 server=/zzgeli.net/114.114.114.114
 server=/zzgjj.com/114.114.114.114
+server=/zzgkyy.com/114.114.114.114
 server=/zzguest.com/114.114.114.114
 server=/zzguifan.com/114.114.114.114
 server=/zzh789.com/114.114.114.114
