--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12419,6 +12419,7 @@ server=/axzchou.com/114.114.114.114
 server=/axzhaofang.com/114.114.114.114
 server=/ay-china.com/114.114.114.114
 server=/ay-health.com/114.114.114.114
+server=/ay2fy.com/114.114.114.114
 server=/ay57.com/114.114.114.114
 server=/ay99.net/114.114.114.114
 server=/ayalm.com/114.114.114.114
