accelerated-domains: add yaeyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90938,6 +90938,7 @@ server=/yaduo.com/114.114.114.114
 server=/yaeherhealth.com/114.114.114.114
 server=/yaersen.com/114.114.114.114
 server=/yaexun.com/114.114.114.114
+server=/yaeyy.com/114.114.114.114
 server=/yafangyiyuan.com/114.114.114.114
 server=/yafco.com/114.114.114.114
 server=/yafdev.com/114.114.114.114
