--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70683,6 +70683,7 @@ server=/scdri.com/114.114.114.114
 server=/scdyjyzx.com/114.114.114.114
 server=/scdytv.com/114.114.114.114
 server=/scdyzx.com/114.114.114.114
+server=/scdz120.com/114.114.114.114
 server=/scdzmw.com/114.114.114.114
 server=/scea.co/114.114.114.114
 server=/scedu.net/114.114.114.114
