accelerated-domains: add alszxyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10854,6 +10854,7 @@ server=/alrailpha.com/114.114.114.114
 server=/alrightzd.com/114.114.114.114
 server=/alskbc.com/114.114.114.114
 server=/alsovalue.com/114.114.114.114
+server=/alszxyy.com/114.114.114.114
 server=/altamob.com/114.114.114.114
 server=/altstory.com/114.114.114.114
 server=/altxw.com/114.114.114.114
