--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86420,6 +86420,7 @@ server=/wwwimages2.adobe.com/114.114.114.114
 server=/wwwmdzx8.com/114.114.114.114
 server=/wwwtisiwa.cc/114.114.114.114
 server=/wwwzzz.com/114.114.114.114
+server=/wwxrmyy.com/114.114.114.114
 server=/wx-api.net/114.114.114.114
 server=/wx-data.com/114.114.114.114
 server=/wx-youyan.net/114.114.114.114
