--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85245,6 +85245,7 @@ server=/wjlyhj.com/114.114.114.114
 server=/wjmh8.com/114.114.114.114
 server=/wjnin.cc/114.114.114.114
 server=/wjqcw.com/114.114.114.114
+server=/wjqwy.com/114.114.114.114
 server=/wjqxmy.com/114.114.114.114
 server=/wjqyw.com/114.114.114.114
 server=/wjrcb.com/114.114.114.114
