accelerated-domains: add xadyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86843,6 +86843,7 @@ server=/xadamai.com/114.114.114.114
 server=/xadiannao.com/114.114.114.114
 server=/xadlwx.com/114.114.114.114
 server=/xadsa.com/114.114.114.114
+server=/xadyyy.com/114.114.114.114
 server=/xaecong.com/114.114.114.114
 server=/xaedumedia.com/114.114.114.114
 server=/xafc.com/114.114.114.114
