--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76282,6 +76282,7 @@ server=/sxhxbank.com/114.114.114.114
 server=/sxinrj.com/114.114.114.114
 server=/sxisa.org/114.114.114.114
 server=/sxjant.com/114.114.114.114
+server=/sxjcdyy.com/114.114.114.114
 server=/sxjdfreight.com/114.114.114.114
 server=/sxjdpm.com/114.114.114.114
 server=/sxjf8789.com/114.114.114.114
