--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87202,6 +87202,7 @@ server=/xdyjt.com/114.114.114.114
 server=/xdystar.com/114.114.114.114
 server=/xdyszx.com/114.114.114.114
 server=/xdytuliao.com/114.114.114.114
+server=/xdyy.net/114.114.114.114
 server=/xdyy100.com/114.114.114.114
 server=/xdzhsw.com/114.114.114.114
 server=/xdzu.net/114.114.114.114
