--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94009,6 +94009,7 @@ server=/ysrh.com/114.114.114.114
 server=/yssm888.com/114.114.114.114
 server=/yssp88.com/114.114.114.114
 server=/yssql.com/114.114.114.114
+server=/yssrmyy.com/114.114.114.114
 server=/ysstech.com/114.114.114.114
 server=/ysszzs.com/114.114.114.114
 server=/yst100.net/114.114.114.114
