accelerated-domains: add fysyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31965,6 +31965,7 @@ server=/fyrwzz.com/114.114.114.114
 server=/fysfzk.com/114.114.114.114
 server=/fysjbj.com/114.114.114.114
 server=/fysoft3.com/114.114.114.114
+server=/fysyy.com/114.114.114.114
 server=/fytcw.com/114.114.114.114
 server=/fythbkj.com/114.114.114.114
 server=/fytxonline.com/114.114.114.114
