accelerated-domains: add ycsyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91455,6 +91455,7 @@ server=/ycsd.work/114.114.114.114
 server=/ycsound.com/114.114.114.114
 server=/ycsrc.com/114.114.114.114
 server=/ycsystem.com/114.114.114.114
+server=/ycsyy.com/114.114.114.114
 server=/yct-tec.com/114.114.114.114
 server=/yctdyy.com/114.114.114.114
 server=/yctxrj.com/114.114.114.114
