accelerated-domains: add lzxrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56619,6 +56619,7 @@ server=/lzxlgg.com/114.114.114.114
 server=/lzxnqt.com/114.114.114.114
 server=/lzxqm.com/114.114.114.114
 server=/lzxrmtzx.com/114.114.114.114
+server=/lzxrmyy.com/114.114.114.114
 server=/lzxy.com/114.114.114.114
 server=/lzyd.com/114.114.114.114
 server=/lzydby.com/114.114.114.114
