accelerated-domains: add sxsrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76350,6 +76350,7 @@ server=/sxsng.com/114.114.114.114
 server=/sxsoft.com/114.114.114.114
 server=/sxsohu.com/114.114.114.114
 server=/sxsqxj.com/114.114.114.114
+server=/sxsrmyy.com/114.114.114.114
 server=/sxsslz.net/114.114.114.114
 server=/sxssyh.com/114.114.114.114
 server=/sxstdl.com/114.114.114.114
