accelerated-domains: add hsskyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41812,6 +41812,7 @@ server=/hssdtest.com/114.114.114.114
 server=/hssemi.com/114.114.114.114
 server=/hssenglish.com/114.114.114.114
 server=/hssjyj.com/114.114.114.114
+server=/hsskyy.com/114.114.114.114
 server=/hsslab.com/114.114.114.114
 server=/hssrc.com/114.114.114.114
 server=/hssyy.com/114.114.114.114
