--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56300,6 +56300,7 @@ server=/lydhb888.com/114.114.114.114
 server=/lydownload.net/114.114.114.114
 server=/lydsy.com/114.114.114.114
 server=/lyduanzao.com/114.114.114.114
+server=/lydyyy.com/114.114.114.114
 server=/lyecs.com/114.114.114.114
 server=/lyf.com/114.114.114.114
 server=/lyfangc.com/114.114.114.114
