--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76889,6 +76889,7 @@ server=/szkingdom.com/114.114.114.114
 server=/szkjcn.com/114.114.114.114
 server=/szknk.net/114.114.114.114
 server=/szknys.com/114.114.114.114
+server=/szknyy.com/114.114.114.114
 server=/szkoa.com/114.114.114.114
 server=/szkobo.com/114.114.114.114
 server=/szkosun.com/114.114.114.114
