accelerated-domains: add zzsdyrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99479,6 +99479,7 @@ server=/zzrcz.com/114.114.114.114
 server=/zzrseng.com/114.114.114.114
 server=/zzs5.com/114.114.114.114
 server=/zzs5.info/114.114.114.114
+server=/zzsdyrmyy.com/114.114.114.114
 server=/zzsey.com/114.114.114.114
 server=/zzsf.com/114.114.114.114
 server=/zzsggzy.com/114.114.114.114
