--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20783,6 +20783,7 @@ server=/clicksun.net/114.114.114.114
 server=/clickwifi.net/114.114.114.114
 server=/clidone.com/114.114.114.114
 server=/client51.com/114.114.114.114
+server=/clifford-hospital.org/114.114.114.114
 server=/cliffordtrading.com/114.114.114.114
 server=/cliim.com/114.114.114.114
 server=/cliim.net/114.114.114.114
