--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79039,6 +79039,7 @@ server=/tjhyzyxy.com/114.114.114.114
 server=/tjinsuo.com/114.114.114.114
 server=/tjj.com/114.114.114.114
 server=/tjjfrh.com/114.114.114.114
+server=/tjjhqyy.com/114.114.114.114
 server=/tjjt360.com/114.114.114.114
 server=/tjjwt.com/114.114.114.114
 server=/tjjzzls.com/114.114.114.114
