--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43157,6 +43157,7 @@ server=/hxjbh.com/114.114.114.114
 server=/hxjinqiao.com/114.114.114.114
 server=/hxjiot.com/114.114.114.114
 server=/hxjiqi.com/114.114.114.114
+server=/hxjnyy.com/114.114.114.114
 server=/hxjsjkj.com/114.114.114.114
 server=/hxjwang.com/114.114.114.114
 server=/hxjxs.com/114.114.114.114
