--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90640,6 +90640,7 @@ server=/xycareer.com/114.114.114.114
 server=/xycdn.com/114.114.114.114
 server=/xycdn.net/114.114.114.114
 server=/xycgd.com/114.114.114.114
+server=/xychyy.com/114.114.114.114
 server=/xyclient.net/114.114.114.114
 server=/xycloud.com/114.114.114.114
 server=/xyclouds.com/114.114.114.114
