accelerated-domains: add azyfy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12514,6 +12514,7 @@ server=/azwang.com/114.114.114.114
 server=/azxdiy.com/114.114.114.114
 server=/azy288.com/114.114.114.114
 server=/azycjd.com/114.114.114.114
+server=/azyfy.com/114.114.114.114
 server=/azz.net/114.114.114.114
 server=/azzdm.com/114.114.114.114
 server=/b-chem.com/114.114.114.114
