accelerated-domains: add qzszyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68550,6 +68550,7 @@ server=/qzssdy.com/114.114.114.114
 server=/qzsx168.com/114.114.114.114
 server=/qzsystem.com/114.114.114.114
 server=/qzsyy.com/114.114.114.114
+server=/qzszyy.com/114.114.114.114
 server=/qzt520.com/114.114.114.114
 server=/qztc.vip/114.114.114.114
 server=/qztour.com/114.114.114.114
