accelerated-domains: add sian.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73505,6 +73505,7 @@ server=/siad-c.com/114.114.114.114
 server=/siaedu.net/114.114.114.114
 server=/siaiyun.com/114.114.114.114
 server=/sialiagames.com.tw/114.114.114.114
+server=/sian.cc/114.114.114.114
 server=/siaoao.com/114.114.114.114
 server=/sias-sha.com/114.114.114.114
 server=/sibfi.com/114.114.114.114
