--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87109,6 +87109,7 @@ server=/xcsclhs.com/114.114.114.114
 server=/xcshaifen.com/114.114.114.114
 server=/xcspcs.com/114.114.114.114
 server=/xcstuido.com/114.114.114.114
+server=/xcsyy.com/114.114.114.114
 server=/xct168.com/114.114.114.114
 server=/xctmr.com/114.114.114.114
 server=/xcultur.com/114.114.114.114
