accelerated-domains: add xhjnyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87423,6 +87423,7 @@ server=/xhjianglong.com/114.114.114.114
 server=/xhjingling.com/114.114.114.114
 server=/xhjj.com/114.114.114.114
 server=/xhjkgj.com/114.114.114.114
+server=/xhjnyy.com/114.114.114.114
 server=/xhjs168.com/114.114.114.114
 server=/xhkt.tv/114.114.114.114
 server=/xhlaowu.com/114.114.114.114
