accelerated-domains: add xxrmyy.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90560,6 +90560,7 @@ server=/xxqipai.com/114.114.114.114
 server=/xxqun.com/114.114.114.114
 server=/xxqzjt.com/114.114.114.114
 server=/xxrjm.com/114.114.114.114
+server=/xxrmyy.net/114.114.114.114
 server=/xxrxfilter.com/114.114.114.114
 server=/xxs8.com/114.114.114.114
 server=/xxsb.com/114.114.114.114
