accelerated-domains: add hunanzy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42805,6 +42805,7 @@ server=/hunanpea.com/114.114.114.114
 server=/hunantv.com/114.114.114.114
 server=/hunanzhibo.com/114.114.114.114
 server=/hunanzp.com/114.114.114.114
+server=/hunanzy.com/114.114.114.114
 server=/hunational.com/114.114.114.114
 server=/hunbei.com/114.114.114.114
 server=/hunbei1.com/114.114.114.114
