accelerated-domains: add xy3yy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90625,6 +90625,7 @@ server=/xy1758.com/114.114.114.114
 server=/xy178.com/114.114.114.114
 server=/xy3000.com/114.114.114.114
 server=/xy36z.com/114.114.114.114
+server=/xy3yy.com/114.114.114.114
 server=/xy58.net/114.114.114.114
 server=/xy599.com/114.114.114.114
 server=/xy77.live/114.114.114.114
