accelerated-domains: add gxyy.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37299,6 +37299,7 @@ server=/gxyxsh.com/114.114.114.114
 server=/gxyxtkj.com/114.114.114.114
 server=/gxyxxny.com/114.114.114.114
 server=/gxyxyy.com/114.114.114.114
+server=/gxyy.net/114.114.114.114
 server=/gxyykj.com/114.114.114.114
 server=/gxyyun.com/114.114.114.114
 server=/gxyyyc.com/114.114.114.114
