--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89923,6 +89923,7 @@ server=/xsjtxt.com/114.114.114.114
 server=/xsjwyx.com/114.114.114.114
 server=/xskhome.com/114.114.114.114
 server=/xslb.me/114.114.114.114
+server=/xslmed.net/114.114.114.114
 server=/xsm818.com/114.114.114.114
 server=/xsmaofa.com/114.114.114.114
 server=/xsmart.com/114.114.114.114
