--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90663,6 +90663,7 @@ server=/xydcname.com/114.114.114.114
 server=/xydcname.net/114.114.114.114
 server=/xydhl.com/114.114.114.114
 server=/xydxcloud.com/114.114.114.114
+server=/xydyfy.com/114.114.114.114
 server=/xydz08.com/114.114.114.114
 server=/xyeyy.com/114.114.114.114
 server=/xyf6.com/114.114.114.114
