--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39364,6 +39364,7 @@ server=/hdlzmdb.com/114.114.114.114
 server=/hdmiaoc.com/114.114.114.114
 server=/hdmnw.com/114.114.114.114
 server=/hdmooncake.com/114.114.114.114
+server=/hdmryy.com/114.114.114.114
 server=/hdmtv168.com/114.114.114.114
 server=/hdmv.org/114.114.114.114
 server=/hdnd01.com/114.114.114.114
