accelerated-domains: add sxzyfy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76416,6 +76416,7 @@ server=/sxzlyy.com/114.114.114.114
 server=/sxzq.com/114.114.114.114
 server=/sxzxsdf.com/114.114.114.114
 server=/sxzydj.com/114.114.114.114
+server=/sxzyfy.com/114.114.114.114
 server=/sxzzdxsc.com/114.114.114.114
 server=/sy-game.com/114.114.114.114
 server=/sy-home.com/114.114.114.114
