--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43587,6 +43587,7 @@ server=/hzstar.com/114.114.114.114
 server=/hzstlzxyy.com/114.114.114.114
 server=/hzswysyy.com/114.114.114.114
 server=/hzszls.com/114.114.114.114
+server=/hzszyyy.com/114.114.114.114
 server=/hzt2006.com/114.114.114.114
 server=/hzteaexpo.com/114.114.114.114
 server=/hztek.com/114.114.114.114
