accelerated-domains: add hdyfy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39403,6 +39403,7 @@ server=/hdxxnl.com/114.114.114.114
 server=/hdxyj.icu/114.114.114.114
 server=/hdxynet.com/114.114.114.114
 server=/hdyanke.com/114.114.114.114
+server=/hdyfy.com/114.114.114.114
 server=/hdyoiuy.com/114.114.114.114
 server=/hdyouxi.com/114.114.114.114
 server=/hdytjt.com/114.114.114.114
