accelerated-domains: add xnxy120.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89740,6 +89740,7 @@ server=/xnw19.vip/114.114.114.114
 server=/xnwan.com/114.114.114.114
 server=/xnwatch.com/114.114.114.114
 server=/xnwmw.com/114.114.114.114
+server=/xnxy120.com/114.114.114.114
 server=/xny365.com/114.114.114.114
 server=/xnyauto.com/114.114.114.114
 server=/xnye.net/114.114.114.114
