accelerated-domains: add yonganyiyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93315,6 +93315,7 @@ server=/yondocredit.com/114.114.114.114
 server=/yong-gang.com/114.114.114.114
 server=/yong-ming.com/114.114.114.114
 server=/yong9ai.com/114.114.114.114
+server=/yonganyiyuan.com/114.114.114.114
 server=/yongaomy.com/114.114.114.114
 server=/yongbangks.com/114.114.114.114
 server=/yongchaohuagong.com/114.114.114.114
