accelerated-domains: add ynkgyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93163,6 +93163,7 @@ server=/ynjkjy.com/114.114.114.114
 server=/ynjkkj.com/114.114.114.114
 server=/ynjlgroup.com/114.114.114.114
 server=/ynkcfc.com/114.114.114.114
+server=/ynkgyy.com/114.114.114.114
 server=/ynkm88.com/114.114.114.114
 server=/ynkmit.com/114.114.114.114
 server=/ynkmjj.com/114.114.114.114
