accelerated-domains: add zsmw.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98786,6 +98786,7 @@ server=/zslp021.com/114.114.114.114
 server=/zslyyn12.com/114.114.114.114
 server=/zslyzjj11.com/114.114.114.114
 server=/zsmama.com/114.114.114.114
+server=/zsmw.net/114.114.114.114
 server=/zsnxapp.com/114.114.114.114
 server=/zsppsj.com/114.114.114.114
 server=/zsquant.com/114.114.114.114
