--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37870,6 +37870,7 @@ server=/gzzongsi.com/114.114.114.114
 server=/gzzoo.com/114.114.114.114
 server=/gzzqy.net/114.114.114.114
 server=/gzzx.cc/114.114.114.114
+server=/h-ceo.com/114.114.114.114
 server=/h-college.com/114.114.114.114
 server=/h-heguo.com/114.114.114.114
 server=/h-shgroup.com/114.114.114.114
