accelerated-domains: add tedaich.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78013,6 +78013,7 @@ server=/tecompharma.com/114.114.114.114
 server=/tecreal.com/114.114.114.114
 server=/tecunonline.com/114.114.114.114
 server=/tecyle.com/114.114.114.114
+server=/tedaich.com/114.114.114.114
 server=/tedaniu.com/114.114.114.114
 server=/teddymobile.net/114.114.114.114
 server=/tedushi.com/114.114.114.114
