--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91386,6 +91386,7 @@ server=/ybqysw.com/114.114.114.114
 server=/ybren.com/114.114.114.114
 server=/ybs120.com/114.114.114.114
 server=/ybscjp.com/114.114.114.114
+server=/ybsdsrmyy.com/114.114.114.114
 server=/ybstjs.com/114.114.114.114
 server=/ybstwl.com/114.114.114.114
 server=/ybsyyh.com/114.114.114.114
