--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89124,6 +89124,7 @@ server=/xjrmyy.com/114.114.114.114
 server=/xjshift.com/114.114.114.114
 server=/xjsic.com/114.114.114.114
 server=/xjsy56.com/114.114.114.114
+server=/xjtcm.com/114.114.114.114
 server=/xjtjjt.com/114.114.114.114
 server=/xjtour.com/114.114.114.114
 server=/xjtrcw.com/114.114.114.114
