accelerated-domains: add zunyihospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99018,6 +99018,7 @@ server=/zunxiang17.com/114.114.114.114
 server=/zunxun.com/114.114.114.114
 server=/zunxun.net/114.114.114.114
 server=/zunyibus.com/114.114.114.114
+server=/zunyihospital.com/114.114.114.114
 server=/zuo11.com/114.114.114.114
 server=/zuo3.com/114.114.114.114
 server=/zuoanedu.com/114.114.114.114
