--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72491,6 +72491,7 @@ server=/shhkcc.com/114.114.114.114
 server=/shhksports.com/114.114.114.114
 server=/shhl56.com/114.114.114.114
 server=/shhmbio.com/114.114.114.114
+server=/shhmu.net/114.114.114.114
 server=/shhorse.com/114.114.114.114
 server=/shhqyy.com/114.114.114.114
 server=/shhs-tw.com/114.114.114.114
