accelerated-domains: add xachyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86863,6 +86863,7 @@ server=/xacg.info/114.114.114.114
 server=/xachangda.com/114.114.114.114
 server=/xachangxing.com/114.114.114.114
 server=/xachanhe.com/114.114.114.114
+server=/xachyy.com/114.114.114.114
 server=/xacitywall.com/114.114.114.114
 server=/xaclcrm.com/114.114.114.114
 server=/xacnnic.com/114.114.114.114
