accelerated-domains: add xinleshiyiyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88648,6 +88648,7 @@ server=/xinlanshengbc.com/114.114.114.114
 server=/xinle.com/114.114.114.114
 server=/xinle366.com/114.114.114.114
 server=/xinle668.com/114.114.114.114
+server=/xinleshiyiyuan.com/114.114.114.114
 server=/xinli001.cc/114.114.114.114
 server=/xinli001.com/114.114.114.114
 server=/xinli001.xyz/114.114.114.114
