--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89459,6 +89459,7 @@ server=/xn--3lqv74e.com/114.114.114.114
 server=/xn--49s82db1ewy7adrq1ik.xn--3ds443g/114.114.114.114
 server=/xn--49sl0911bjlf.com/114.114.114.114
 server=/xn--49sl0911bjlf.net/114.114.114.114
+server=/xn--4gq0d69oba129b9wd94ey8bs83ji3c3q7hoka.org/114.114.114.114
 server=/xn--4gq15ar83c7ymz4n.com/114.114.114.114
 server=/xn--4lwr21d.com/114.114.114.114
 server=/xn--4oqr35flvp.com/114.114.114.114
