--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40979,6 +40979,7 @@ server=/hnryly.com/114.114.114.114
 server=/hns5j.com/114.114.114.114
 server=/hnsbxl.com/114.114.114.114
 server=/hnsdzjy.com/114.114.114.114
+server=/hnsdzsrmyy.com/114.114.114.114
 server=/hnsfdc.com/114.114.114.114
 server=/hnshengben.com/114.114.114.114
 server=/hnshqfz.com/114.114.114.114
