accelerated-domains: add sqsyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75176,6 +75176,7 @@ server=/sqshmzx.net/114.114.114.114
 server=/sqsjt.net/114.114.114.114
 server=/sqstudio.com/114.114.114.114
 server=/sqswjt.com/114.114.114.114
+server=/sqsyy.com/114.114.114.114
 server=/squarecn.com/114.114.114.114
 server=/squarefong.com/114.114.114.114
 server=/squirtle-skfjkdl.com/114.114.114.114
