accelerated-domains: add nbfeyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60768,6 +60768,7 @@ server=/nbdyf.com/114.114.114.114
 server=/nbegame.com/114.114.114.114
 server=/nbegame.net/114.114.114.114
 server=/nbenl.com/114.114.114.114
+server=/nbfeyy.com/114.114.114.114
 server=/nbfox.com/114.114.114.114
 server=/nbfzsj.com/114.114.114.114
 server=/nbgdjt.com/114.114.114.114
