accelerated-domains: add ylsdeyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93005,6 +93005,7 @@ server=/ylrj.com/114.114.114.114
 server=/ylrq.org/114.114.114.114
 server=/ylscgl.com/114.114.114.114
 server=/ylscw.net/114.114.114.114
+server=/ylsdeyy.com/114.114.114.114
 server=/ylsfqyy.com/114.114.114.114
 server=/ylsgmr.com/114.114.114.114
 server=/ylsgzx.com/114.114.114.114
