--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47123,6 +47123,7 @@ server=/jhnsyh.com/114.114.114.114
 server=/jhonge.net/114.114.114.114
 server=/jhonse.com/114.114.114.114
 server=/jhotel-shanghai.com/114.114.114.114
+server=/jhqrmyy.com/114.114.114.114
 server=/jhqshfly.com/114.114.114.114
 server=/jhrcbank.com/114.114.114.114
 server=/jhsairport.com/114.114.114.114
