accelerated-domains: add xyyy999.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90816,6 +90816,7 @@ server=/xyykt.org/114.114.114.114
 server=/xyyuedu.com/114.114.114.114
 server=/xyyx82.com/114.114.114.114
 server=/xyyxcm.co/114.114.114.114
+server=/xyyy999.com/114.114.114.114
 server=/xyyzi.com/114.114.114.114
 server=/xyz-jm.com/114.114.114.114
 server=/xyz1412.net/114.114.114.114
