--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80108,6 +80108,7 @@ server=/tsyvps.com/114.114.114.114
 server=/tsyzm.com/114.114.114.114
 server=/tszhjk.com/114.114.114.114
 server=/tszlsgs.com/114.114.114.114
+server=/tszxhosp.com/114.114.114.114
 server=/tszyzx.com/114.114.114.114
 server=/tt-app.com/114.114.114.114
 server=/tt-bike.com/114.114.114.114
