accelerated-domains: add ynshhyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93210,6 +93210,7 @@ server=/ynsddbqyzxyy.com/114.114.114.114
 server=/ynsdfz.net/114.114.114.114
 server=/ynsfhq.com/114.114.114.114
 server=/ynshangji.com/114.114.114.114
+server=/ynshhyy.com/114.114.114.114
 server=/ynshijian.com/114.114.114.114
 server=/ynsjg.com/114.114.114.114
 server=/ynsnjt.com/114.114.114.114
