accelerated-domains: add wfsydzxyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84595,6 +84595,7 @@ server=/wfojsm.com/114.114.114.114
 server=/wfplb.com/114.114.114.114
 server=/wfsanshan.com/114.114.114.114
 server=/wfshiliyy.com/114.114.114.114
+server=/wfsydzxyy.com/114.114.114.114
 server=/wftdrh.com/114.114.114.114
 server=/wftengjia.com/114.114.114.114
 server=/wftvqcm.com/114.114.114.114
