--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66316,6 +66316,7 @@ server=/qdmcxh.com/114.114.114.114
 server=/qdmm.com/114.114.114.114
 server=/qdmswx.com/114.114.114.114
 server=/qdnsyh.com/114.114.114.114
+server=/qdnzrmyy.com/114.114.114.114
 server=/qdpdjx.com/114.114.114.114
 server=/qdpengye.com/114.114.114.114
 server=/qdpr.com/114.114.114.114
