accelerated-domains: add kf155yy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51187,6 +51187,7 @@ server=/kezehb.com/114.114.114.114
 server=/kezhaozhao.com/114.114.114.114
 server=/kezhi.tech/114.114.114.114
 server=/kf.ai/114.114.114.114
+server=/kf155yy.com/114.114.114.114
 server=/kf3msfm.com/114.114.114.114
 server=/kf5.com/114.114.114.114
 server=/kf911.com/114.114.114.114
