--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12437,6 +12437,7 @@ server=/ayemmadencevre.com/114.114.114.114
 server=/ayeucefm.com/114.114.114.114
 server=/ayfdc.com/114.114.114.114
 server=/ayfy.com/114.114.114.114
+server=/ayfyfy.com/114.114.114.114
 server=/ayguge.com/114.114.114.114
 server=/ayhmjy.com/114.114.114.114
 server=/ayhuowan.com/114.114.114.114
