--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73597,6 +73597,7 @@ server=/sihuanpharm.com/114.114.114.114
 server=/sihui-electric.com/114.114.114.114
 server=/sihuida.net/114.114.114.114
 server=/sihuisoft.com/114.114.114.114
+server=/sihuizhongyi.com/114.114.114.114
 server=/siii.xyz/114.114.114.114
 server=/siilu.com/114.114.114.114
 server=/siitad.com/114.114.114.114
