accelerated-domains: add fjsdsrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30869,6 +30869,7 @@ server=/fjq.icu/114.114.114.114
 server=/fjqionghai.com/114.114.114.114
 server=/fjrmyy.com/114.114.114.114
 server=/fjsdn.com/114.114.114.114
+server=/fjsdsrmyy.com/114.114.114.114
 server=/fjsen.com/114.114.114.114
 server=/fjsfa.org/114.114.114.114
 server=/fjsfy.com/114.114.114.114
