accelerated-domains: add lydfyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56319,6 +56319,7 @@ server=/lyd6688.com/114.114.114.114
 server=/lydaas.com/114.114.114.114
 server=/lydconn.com/114.114.114.114
 server=/lydezx.net/114.114.114.114
+server=/lydfyy.com/114.114.114.114
 server=/lydhb888.com/114.114.114.114
 server=/lydownload.net/114.114.114.114
 server=/lydsy.com/114.114.114.114
