--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40996,6 +40996,7 @@ server=/hongmo.xyz/114.114.114.114
 server=/hongmoka.com/114.114.114.114
 server=/hongmu.com/114.114.114.114
 server=/hongniang.com/114.114.114.114
+server=/hongniuzyimage.com/114.114.114.114
 server=/hongpig.com/114.114.114.114
 server=/hongqi.tv/114.114.114.114
 server=/hongqiangmjg.com/114.114.114.114
