accelerated-domains: add jnhyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48865,6 +48865,7 @@ server=/jnhongyun9.com/114.114.114.114
 server=/jnhouse.com/114.114.114.114
 server=/jnhwcw.com/114.114.114.114
 server=/jnhxzc.com/114.114.114.114
+server=/jnhyyy.com/114.114.114.114
 server=/jnhzxx.com/114.114.114.114
 server=/jnj-energy.com/114.114.114.114
 server=/jnjfwzhs.com/114.114.114.114
