--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91472,6 +91472,7 @@ server=/ycgslb.com/114.114.114.114
 server=/ycgzgame.com/114.114.114.114
 server=/ychanfang.com/114.114.114.114
 server=/ychap.com/114.114.114.114
+server=/ychcqmu.com/114.114.114.114
 server=/ychedu.com/114.114.114.114
 server=/ychromedgeie.com/114.114.114.114
 server=/ychxie.com/114.114.114.114
