--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18076,6 +18076,7 @@ server=/cdweikebaba.com/114.114.114.114
 server=/cdweikebaba.xin/114.114.114.114
 server=/cdwulian.com/114.114.114.114
 server=/cdxczl.com/114.114.114.114
+server=/cdxdyy.com/114.114.114.114
 server=/cdxrdz.com/114.114.114.114
 server=/cdxsxbx.com/114.114.114.114
 server=/cdxwcx.com/114.114.114.114
