accelerated-domains: add hlbryy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40641,6 +40641,7 @@ server=/hlb2020.com/114.114.114.114
 server=/hlbcks.com/114.114.114.114
 server=/hlbeixiu.com/114.114.114.114
 server=/hlbeixiu.net/114.114.114.114
+server=/hlbryy.com/114.114.114.114
 server=/hlcdn.cc/114.114.114.114
 server=/hlchsw.com/114.114.114.114
 server=/hlcode.net/114.114.114.114
