accelerated-domains: add qysrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68448,6 +68448,7 @@ server=/qys2y.com/114.114.114.114
 server=/qysd.net/114.114.114.114
 server=/qysgf.com/114.114.114.114
 server=/qysport.com/114.114.114.114
+server=/qysrmyy.com/114.114.114.114
 server=/qyssgame.com/114.114.114.114
 server=/qysulian.com/114.114.114.114
 server=/qysuliao.com/114.114.114.114
