accelerated-domains: add cpqrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22472,6 +22472,7 @@ server=/cpplay.com/114.114.114.114
 server=/cpppc.org/114.114.114.114
 server=/cpppf.org/114.114.114.114
 server=/cppszw.com/114.114.114.114
+server=/cpqrmyy.com/114.114.114.114
 server=/cps1688.com/114.114.114.114
 server=/cps800.com/114.114.114.114
 server=/cpsbeijing.org/114.114.114.114
