--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76933,6 +76933,7 @@ server=/szknyy.com/114.114.114.114
 server=/szkoa.com/114.114.114.114
 server=/szkobo.com/114.114.114.114
 server=/szkosun.com/114.114.114.114
+server=/szkqyy.com/114.114.114.114
 server=/szl724.com/114.114.114.114
 server=/szlaituo.com/114.114.114.114
 server=/szlande.com/114.114.114.114
