--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93029,6 +93029,7 @@ server=/ylrq.org/114.114.114.114
 server=/ylscgl.com/114.114.114.114
 server=/ylscw.net/114.114.114.114
 server=/ylsdeyy.com/114.114.114.114
+server=/ylsdyyy.com/114.114.114.114
 server=/ylsfqyy.com/114.114.114.114
 server=/ylsgmr.com/114.114.114.114
 server=/ylsgzx.com/114.114.114.114
