--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27517,6 +27517,7 @@ server=/dyxtw.com/114.114.114.114
 server=/dyxuexin.com/114.114.114.114
 server=/dyxw.com/114.114.114.114
 server=/dyxz.la/114.114.114.114
+server=/dyxzyy.com/114.114.114.114
 server=/dyys.com/114.114.114.114
 server=/dyysoft.net/114.114.114.114
 server=/dyzdx.com/114.114.114.114
