accelerated-domains: add xadwyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86901,6 +86901,7 @@ server=/xadamai.com/114.114.114.114
 server=/xadiannao.com/114.114.114.114
 server=/xadlwx.com/114.114.114.114
 server=/xadsa.com/114.114.114.114
+server=/xadwyy.com/114.114.114.114
 server=/xadyyy.com/114.114.114.114
 server=/xaecong.com/114.114.114.114
 server=/xaedumedia.com/114.114.114.114
