accelerated-domains: add hnnhyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40952,6 +40952,7 @@ server=/hnmuseum.com/114.114.114.114
 server=/hnmyhk.com/114.114.114.114
 server=/hnmzbg.com/114.114.114.114
 server=/hnnbwdiaosu.com/114.114.114.114
+server=/hnnhyy.com/114.114.114.114
 server=/hnninglian.com/114.114.114.114
 server=/hnnx.com/114.114.114.114
 server=/hnnxs.com/114.114.114.114
