--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61276,6 +61276,7 @@ server=/nfschina.com/114.114.114.114
 server=/nfyeya.com/114.114.114.114
 server=/nfyny.com/114.114.114.114
 server=/nfyun.vip/114.114.114.114
+server=/nfyy.com/114.114.114.114
 server=/nfzhouyi.com/114.114.114.114
 server=/nfzmy.com/114.114.114.114
 server=/nfzzh.com/114.114.114.114
