accelerated-domains: add taishanyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77393,6 +77393,7 @@ server=/taisantech.com/114.114.114.114
 server=/taisenfurniture.com/114.114.114.114
 server=/taishangshiwu.com/114.114.114.114
 server=/taishanxq.com/114.114.114.114
+server=/taishanyy.com/114.114.114.114
 server=/taisuyun.com/114.114.114.114
 server=/taitaisf.com/114.114.114.114
 server=/taitonglj.com/114.114.114.114
