--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62640,6 +62640,7 @@ server=/ntcfy.com/114.114.114.114
 server=/ntcgnj.com/114.114.114.114
 server=/ntcor.com/114.114.114.114
 server=/ntdingke.com/114.114.114.114
+server=/ntdsyy.com/114.114.114.114
 server=/ntdvf.com/114.114.114.114
 server=/ntefyxq.com/114.114.114.114
 server=/ntes53.com/114.114.114.114
