accelerated-domains: add nhfyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61322,6 +61322,7 @@ server=/nhcec.com/114.114.114.114
 server=/nhcilab.com/114.114.114.114
 server=/nhcsw.com/114.114.114.114
 server=/nhdmd.com/114.114.114.114
+server=/nhfyyy.com/114.114.114.114
 server=/nhganggeban.com/114.114.114.114
 server=/nhhongyi.com/114.114.114.114
 server=/nhjn788.fun/114.114.114.114
