--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64497,6 +64497,7 @@ server=/pdreading.com/114.114.114.114
 server=/pdreamer.com/114.114.114.114
 server=/pdryx.com/114.114.114.114
 server=/pdscb.com/114.114.114.114
+server=/pdsey.com/114.114.114.114
 server=/pdsgjj.com/114.114.114.114
 server=/pdsjycm.com/114.114.114.114
 server=/pdskgb.com/114.114.114.114
