accelerated-domains: add zjszsyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98196,6 +98196,7 @@ server=/zjswxpx.com/114.114.114.114
 server=/zjsxlt.com/114.114.114.114
 server=/zjsxrz.com/114.114.114.114
 server=/zjszbank.com/114.114.114.114
+server=/zjszsyy.com/114.114.114.114
 server=/zjszzs.com/114.114.114.114
 server=/zjt2017.com/114.114.114.114
 server=/zjtangshan.com/114.114.114.114
