--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75235,6 +75235,7 @@ server=/srm.dji.com/114.114.114.114
 server=/srmyy.com/114.114.114.114
 server=/srrsh.com/114.114.114.114
 server=/srrtvu.com/114.114.114.114
+server=/srslyy.com/114.114.114.114
 server=/srsq.club/114.114.114.114
 server=/srt365.com/114.114.114.114
 server=/srtljs.com/114.114.114.114
