--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61915,6 +61915,7 @@ server=/nmgcysm.com/114.114.114.114
 server=/nmgd.com/114.114.114.114
 server=/nmgfood.net/114.114.114.114
 server=/nmgfrank.com/114.114.114.114
+server=/nmgfy.com/114.114.114.114
 server=/nmggyy.com/114.114.114.114
 server=/nmghhjt.com/114.114.114.114
 server=/nmghtszkj.com/114.114.114.114
