accelerated-domains: add sdlsxrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71112,6 +71112,7 @@ server=/sdlongli.com/114.114.114.114
 server=/sdlqjg.com/114.114.114.114
 server=/sdlsgroup.com/114.114.114.114
 server=/sdlsjszp.com/114.114.114.114
+server=/sdlsxrmyy.com/114.114.114.114
 server=/sdludian.com/114.114.114.114
 server=/sdlvbang.com/114.114.114.114
 server=/sdlvjuren.com/114.114.114.114
