--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57637,6 +57637,7 @@ server=/med126.com/114.114.114.114
 server=/med66.com/114.114.114.114
 server=/meda.cc/114.114.114.114
 server=/medcaren.com/114.114.114.114
+server=/meddatas.com/114.114.114.114
 server=/medebound.com/114.114.114.114
 server=/medeming.com/114.114.114.114
 server=/medhong.com/114.114.114.114
