accelerated-domains: add aychfy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12431,6 +12431,7 @@ server=/aybwg.org/114.114.114.114
 server=/aycav.com/114.114.114.114
 server=/aycdn.cc/114.114.114.114
 server=/aycgu.com/114.114.114.114
+server=/aychfy.com/114.114.114.114
 server=/aycm.net/114.114.114.114
 server=/ayctgy.com/114.114.114.114
 server=/aydaojia.com/114.114.114.114
