--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50086,6 +50086,7 @@ server=/jxdiguo.com/114.114.114.114
 server=/jxdown.com/114.114.114.114
 server=/jxdxxt.com/114.114.114.114
 server=/jxdyf.com/114.114.114.114
+server=/jxdyyy.com/114.114.114.114
 server=/jxedt.com/114.114.114.114
 server=/jxedu.net/114.114.114.114
 server=/jxeduyun.com/114.114.114.114
