accelerated-domains: add zzzyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99642,5 +99642,6 @@ server=/zzzyb.com/114.114.114.114
 server=/zzzyk.com/114.114.114.114
 server=/zzzymjg.com/114.114.114.114
 server=/zzzyy.com/114.114.114.114
+server=/zzzyyy.com/114.114.114.114
 server=/zzzzaaaa.com/114.114.114.114
 server=/zzzzzz.me/114.114.114.114
