--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86641,6 +86641,7 @@ server=/wy100.com/114.114.114.114
 server=/wy182000.com/114.114.114.114
 server=/wy213.com/114.114.114.114
 server=/wy213.net/114.114.114.114
+server=/wy2fy.com/114.114.114.114
 server=/wy34.com/114.114.114.114
 server=/wy6000.com/114.114.114.114
 server=/wy9595.xyz/114.114.114.114
