--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27548,6 +27548,7 @@ server=/dzbchina.com/114.114.114.114
 server=/dzblo.com/114.114.114.114
 server=/dzboligang.com/114.114.114.114
 server=/dzbxk.com/114.114.114.114
+server=/dzcch.com/114.114.114.114
 server=/dzcj.tv/114.114.114.114
 server=/dzcjw.com/114.114.114.114
 server=/dzcmd.com/114.114.114.114
