--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91400,6 +91400,7 @@ server=/yb1867.com/114.114.114.114
 server=/yb3.cc/114.114.114.114
 server=/yb505.in/114.114.114.114
 server=/yb983.com/114.114.114.114
+server=/yb999.com/114.114.114.114
 server=/yba120.com/114.114.114.114
 server=/ybaby.com/114.114.114.114
 server=/ybanj.com/114.114.114.114
