--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70903,6 +70903,7 @@ server=/scssdd.com/114.114.114.114
 server=/scsstjt.com/114.114.114.114
 server=/scsuhuigy.com/114.114.114.114
 server=/scsxth.com/114.114.114.114
+server=/scsyaszyyy.com/114.114.114.114
 server=/sctbc.net/114.114.114.114
 server=/sctcd.com/114.114.114.114
 server=/sctdzl.com/114.114.114.114
