--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48732,6 +48732,7 @@ server=/jlkj.cc/114.114.114.114
 server=/jlkja.com/114.114.114.114
 server=/jllihua.com/114.114.114.114
 server=/jlltxgbxyjy.com/114.114.114.114
+server=/jllyzxyy.com/114.114.114.114
 server=/jlmhw.com/114.114.114.114
 server=/jlminte.com/114.114.114.114
 server=/jlmuban.com/114.114.114.114
