accelerated-domains: add nh2h.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61324,6 +61324,7 @@ server=/ngrvvcr.com/114.114.114.114
 server=/ngty556.com/114.114.114.114
 server=/ngwxw.com/114.114.114.114
 server=/nh.com/114.114.114.114
+server=/nh2h.com/114.114.114.114
 server=/nhaidu.com/114.114.114.114
 server=/nhaidu.net/114.114.114.114
 server=/nhcec.com/114.114.114.114
