--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13686,6 +13686,7 @@ server=/bdxyykj.com/114.114.114.114
 server=/bdydns.com/114.114.114.114
 server=/bdydns.net/114.114.114.114
 server=/bdyhem.com/114.114.114.114
+server=/bdylzbyy.com/114.114.114.114
 server=/bdymkt.com/114.114.114.114
 server=/bdys10.com/114.114.114.114
 server=/bdysite.com/114.114.114.114
