accelerated-domains: add npsdyyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62562,6 +62562,7 @@ server=/npodevelopment.org/114.114.114.114
 server=/npoll.net/114.114.114.114
 server=/npp-battery.com/114.114.114.114
 server=/npp.cc/114.114.114.114
+server=/npsdyyy.com/114.114.114.114
 server=/nptpark.com/114.114.114.114
 server=/nptwedding.com/114.114.114.114
 server=/npub.net/114.114.114.114
