accelerated-domains: add cmudental.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21172,6 +21172,7 @@ server=/cmtopdr.com/114.114.114.114
 server=/cmtrq.com/114.114.114.114
 server=/cmtv1.com/114.114.114.114
 server=/cmu1h.com/114.114.114.114
+server=/cmudental.com/114.114.114.114
 server=/cmugx.com/114.114.114.114
 server=/cmuliang.com/114.114.114.114
 server=/cmviking.com/114.114.114.114
