accelerated-domains: add hnzlyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41105,6 +41105,7 @@ server=/hnzjip.com/114.114.114.114
 server=/hnzjyl.com/114.114.114.114
 server=/hnzkclouds.com/114.114.114.114
 server=/hnzkhbsb.com/114.114.114.114
+server=/hnzlyy.com/114.114.114.114
 server=/hnzm.vip/114.114.114.114
 server=/hnzoc.com/114.114.114.114
 server=/hnzqw.com/114.114.114.114
