--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22675,6 +22675,7 @@ server=/cqslim.com/114.114.114.114
 server=/cqslim.net/114.114.114.114
 server=/cqsms.net/114.114.114.114
 server=/cqsoft.org/114.114.114.114
+server=/cqsongshan.com/114.114.114.114
 server=/cqsta.com/114.114.114.114
 server=/cqswxcy.com/114.114.114.114
 server=/cqsxedu.com/114.114.114.114
