--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40552,6 +40552,7 @@ server=/hjwsky.com/114.114.114.114
 server=/hjwsxzz.com/114.114.114.114
 server=/hjwxcps.com/114.114.114.114
 server=/hjxhg.com/114.114.114.114
+server=/hjxry.com/114.114.114.114
 server=/hjxsjx.com/114.114.114.114
 server=/hjxtv.com/114.114.114.114
 server=/hjy1314.com/114.114.114.114
