accelerated-domains: add hnetyy.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40871,6 +40871,7 @@ server=/hnedition.com/114.114.114.114
 server=/hnedutv.com/114.114.114.114
 server=/hnemb.com/114.114.114.114
 server=/hnetn.com/114.114.114.114
+server=/hnetyy.net/114.114.114.114
 server=/hnfa.org/114.114.114.114
 server=/hnfapiao.com/114.114.114.114
 server=/hnfcjr.com/114.114.114.114
