--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66554,6 +66554,7 @@ server=/qhscw.net/114.114.114.114
 server=/qhsdzs.com/114.114.114.114
 server=/qhsetup.com/114.114.114.114
 server=/qhsklw.com/114.114.114.114
+server=/qhsrmyy.com/114.114.114.114
 server=/qhssyy.com/114.114.114.114
 server=/qhstatic.com/114.114.114.114
 server=/qhsxf.net/114.114.114.114
