accelerated-domains: add zpxrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98710,6 +98710,7 @@ server=/zptq.com/114.114.114.114
 server=/zpug.net/114.114.114.114
 server=/zpwcb.com/114.114.114.114
 server=/zpwz.net/114.114.114.114
+server=/zpxrmyy.com/114.114.114.114
 server=/zq101.net/114.114.114.114
 server=/zq12369.com/114.114.114.114
 server=/zq235.com/114.114.114.114
