accelerated-domains: add xysdyrmyygw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90804,6 +90804,7 @@ server=/xyrbszb.com/114.114.114.114
 server=/xyrkl.com/114.114.114.114
 server=/xyrtv.com/114.114.114.114
 server=/xysb.com/114.114.114.114
+server=/xysdyrmyygw.com/114.114.114.114
 server=/xyshoppingbag.com/114.114.114.114
 server=/xyshu8.com/114.114.114.114
 server=/xyshuk.com/114.114.114.114
