accelerated-domains: add qingxianrenminyiyuan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67094,6 +67094,7 @@ server=/qinguishipin.com/114.114.114.114
 server=/qinguoag.com/114.114.114.114
 server=/qingwabs.com/114.114.114.114
 server=/qingwk.com/114.114.114.114
+server=/qingxianrenminyiyuan.com/114.114.114.114
 server=/qingxiaoyun.com/114.114.114.114
 server=/qingxuetang.com/114.114.114.114
 server=/qingxun.com/114.114.114.114
