--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96760,6 +96760,7 @@ server=/zhenhaotao.com/114.114.114.114
 server=/zhenhaotv.com/114.114.114.114
 server=/zhenhong56.com/114.114.114.114
 server=/zhenhonggroup.com/114.114.114.114
+server=/zhenhospital.com/114.114.114.114
 server=/zhenhuadj.com/114.114.114.114
 server=/zhenhuan888.com/114.114.114.114
 server=/zhenimg.com/114.114.114.114
