accelerated-domains: add pkucnooch.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65190,6 +65190,7 @@ server=/pku.tech/114.114.114.114
 server=/pku666.com/114.114.114.114
 server=/pkucare.com/114.114.114.114
 server=/pkucarenjk.com/114.114.114.114
+server=/pkucnooch.com/114.114.114.114
 server=/pkuczuo.com/114.114.114.114
 server=/pkufh.com/114.114.114.114
 server=/pkulaw.com/114.114.114.114
