accelerated-domains: add hnnkyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40965,6 +40965,7 @@ server=/hnmzbg.com/114.114.114.114
 server=/hnnbwdiaosu.com/114.114.114.114
 server=/hnnhyy.com/114.114.114.114
 server=/hnninglian.com/114.114.114.114
+server=/hnnkyy.com/114.114.114.114
 server=/hnnx.com/114.114.114.114
 server=/hnnxs.com/114.114.114.114
 server=/hnnzwhyy.com/114.114.114.114
