accelerated-domains: add scsyytj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70921,6 +70921,7 @@ server=/scsstjt.com/114.114.114.114
 server=/scsuhuigy.com/114.114.114.114
 server=/scsxth.com/114.114.114.114
 server=/scsyaszyyy.com/114.114.114.114
+server=/scsyytj.com/114.114.114.114
 server=/sctbc.net/114.114.114.114
 server=/sctcd.com/114.114.114.114
 server=/sctdzl.com/114.114.114.114
