accelerated-domains: add huaxiaeye.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42399,6 +42399,7 @@ server=/huaxi100.com/114.114.114.114
 server=/huaxia.com/114.114.114.114
 server=/huaxia77.com/114.114.114.114
 server=/huaxiabeidou.com/114.114.114.114
+server=/huaxiaeye.com/114.114.114.114
 server=/huaxiaf.com/114.114.114.114
 server=/huaxiagg.com/114.114.114.114
 server=/huaxiajianyan.com/114.114.114.114
