accelerated-domains: add jnrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48912,6 +48912,7 @@ server=/jnpfsoft.com/114.114.114.114
 server=/jnpjyy.com/114.114.114.114
 server=/jnqzyy.com/114.114.114.114
 server=/jnrain.com/114.114.114.114
+server=/jnrmyy.com/114.114.114.114
 server=/jnruilun.com/114.114.114.114
 server=/jnshijia.com/114.114.114.114
 server=/jnshu.com/114.114.114.114
