--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95368,6 +95368,7 @@ server=/yynetwk.com/114.114.114.114
 server=/yyouren.com/114.114.114.114
 server=/yyoz.com/114.114.114.114
 server=/yyp17.com/114.114.114.114
+server=/yypf-china.com/114.114.114.114
 server=/yypt.com/114.114.114.114
 server=/yyq.com/114.114.114.114
 server=/yyquan.vip/114.114.114.114
